$Id$
===================
HAWKSCOPE CHANGELOG
===================
http://hawkscope.googlecode.com

Changes in version 0.5.3 (2009-03-13)
-------------------------------------
* Optimized memory consumption and overal performance
* Long menus are no longer splitted with "More..."
  http://code.google.com/p/hawkscope/issues/detail?id=64
* Periodic menu reload in background (with at least 3 minutes between reloads)
  http://code.google.com/p/hawkscope/issues/detail?id=62
* Execute plugin
  http://code.google.com/p/hawkscope/issues/detail?id=60 

Changes in version 0.5.2 (2009-02-28)
-------------------------------------
* Twitter plugin (available separately)
  http://code.google.com/p/hawkscope/issues/detail?id=59
* Improved plugin support
  http://code.google.com/p/hawkscope/issues/detail?id=57
* Better password protection
  http://code.google.com/p/hawkscope/issues/detail?id=58

Changes in version 0.5.1 (2009-02-24)
-------------------------------------
* Linux GIJ 4.3 support
  http://code.google.com/p/hawkscope/issues/detail?id=54
  http://code.google.com/p/hawkscope/issues/detail?id=55
  http://code.google.com/p/hawkscope/issues/detail?id=56

Changes in version 0.5.0 (2009-02-20)
-------------------------------------
* Plugin System
  http://code.google.com/p/hawkscope/issues/detail?id=27
* Open With plugin
  http://code.google.com/p/hawkscope/issues/detail?id=42  
* A temporary workaround for Mac menubar icon blues
  http://code.google.com/p/hawkscope/issues/detail?id=33
* Friendlier GUI windows
  http://code.google.com/p/hawkscope/issues/detail?id=44   
* Interactive error report
  http://code.google.com/p/hawkscope/issues/detail?id=46 
* Help Window
  http://code.google.com/p/hawkscope/issues/detail?id=43

Changes in version 0.4.1 (2009-02-06)
-------------------------------------
* Separate versions for each operating system
  http://code.google.com/p/hawkscope/issues/detail?id=37
* Mac application contents are no longer shown