@@ -4,7 +4,7 @@
 	<groupId>com.varaneckas</groupId>
 	<artifactId>hawkscope</artifactId>
 	<packaging>jar</packaging>
-	<version>0.5.2</version>
+	<version>0.5.3</version>
 	<name>Hawkscope</name>
 	<url>http://hawkscope.googlecode.com</url>
 	<!-- $Id$ -->
